--- a/style.css
+++ b/style.css
@@ -61,8 +61,15 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: vw;
+    font-size: 3.5vw;
 }
+
+section > p {
+    padding-bottom: 2em;
+}
+
+
+
 .normal {
     background-color: white;
     color: black;
@@ -71,12 +78,26 @@ section {
 .imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473) ;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .imagem > p {
     display:inline-block;
-    padding: auto;5px
-    background-color: rgba(0, 0, 0, 0.253);
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+#img01 {
+background-image: url(imagens/background001.jpg);
+background-position: right center;
+}
+
+
+#img02 {
+background-image: url(imagens/background002.jpg);
 }
 
 
